syntax = "proto3";

package build;

option java_package = "com.virgilsecurity.passw0rd.protobuf.build";
option java_outer_classname = "Passw0rdProtos";

message EnrollmentRequest {
    uint32 version = 1;
}

message EnrollmentResponse {
    uint32 version = 1;
    bytes response = 2;
}

message VerifyPasswordRequest {
    uint32 version = 1;
    bytes request = 2;
}

message VerifyPasswordResponse {
    bytes response = 1;
}

message UpdateTokenResponse {
    uint32 version = 1;
    bytes update_token = 2;
}

message KeypairResponse {
    uint32 version = 1;
    string id = 2;
    bytes public_key = 3;
}